fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -300,8 +300,12 @@ body {
                         display: -ms-flexbox;
                         display: flex;
                         outline: none;
+                        max-height: 0;
+                        overflow: hidden;
                         &.slick-active {
                             width: 100% !important;
+                            max-height: initial;
+                            overflow: auto;
                         }
                         img {
                             max-width: 100%;
